# nbstata-uv-setup

./: .gitattributes  README.md  index.html  index.qmd  pyproject.toml  setup-linux.sh  setup-macos.sh  setup-windows.sh
