[project]
name = "nbstata-uv-setup"
version = "0.1.0"
description = "This project demonstrates how to use the nbstata Jupyter kernel in a uv virtual environment, so that one can render Quarto documents using this engine."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyterlab>=4.4.2",
    "jupyterlab-stata-highlight2>=0.1.2",
    "nbstata>=0.8.2",
]
